<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/LoginScreen"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".Login">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/login_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:src="@drawable/login"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/login"
        android:layout_below="@id/login_icon">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Login Here"
            android:textSize="32sp"
            android:gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:id="@+id/logininfo"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Email"
            android:textSize="20sp"
            android:id="@+id/emailet"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/andada"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="12dp"
            android:padding="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Password"
            android:textSize="20sp"
            android:id="@+id/passwordet"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/andada"
            android:layout_marginTop="12dp"
            android:padding="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:background="@color/my_primary"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Login"
            android:id="@+id/login_btn"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginlink"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/logininfo">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Don't have an account? "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/regbtn"
            android:textSize="18sp"
            android:textColor="@color/my_primary"
            android:text="Register Here"/>
    </LinearLayout>





</RelativeLayout>