<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".take_info"
    android:background="#DF5151"
    android:padding="16dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tittle_bar_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:text="Update Details"
            android:fontFamily="monospace"
            android:textColor="#ffbaba"
            android:textStyle="bold"
            android:textSize="32dp"
            />
        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/save"
            android:src="@drawable/ic_baseline_done_all_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="#ffbaba"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tittle_bar_layout"
        android:orientation="vertical"
        android:padding="16dp"
        android:id="@+id/ll"
        android:layout_marginVertical="26dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corner">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/rounded_corner"
            android:gravity="center|center_vertical|left"
            android:fontFamily="@font/cantata_one"
            android:paddingLeft="5dp"
            android:hint="Date (dd/mm/yy):"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/date"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/rounded_corner"
            android:gravity="center|center_vertical|left"
            android:fontFamily="@font/cantata_one"
            android:paddingLeft="5dp"
            android:hint="Time (hh:mm):"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/time"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/rounded_corner"
            android:gravity="center|center_vertical|left"
            android:fontFamily="@font/cantata_one"
            android:paddingLeft="5dp"
            android:hint="Systolic pressure (mm Hg):"
            android:id="@+id/systolic"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/rounded_corner"
            android:gravity="center|center_vertical|left"
            android:fontFamily="@font/cantata_one"
            android:paddingLeft="5dp"
            android:hint="Diastolic pressure (mm Hg):"
            android:id="@+id/dia"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/rounded_corner"
            android:gravity="center|center_vertical|left"
            android:fontFamily="@font/cantata_one"
            android:paddingLeft="5dp"
            android:hint="Heart Rate (bpm):"
            android:id="@+id/heart"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/rounded_corner"
            android:gravity="center|center_vertical|left"
            android:fontFamily="@font/cantata_one"
            android:paddingLeft="5dp"
            android:hint="Comment:"
            android:id="@+id/cmnt"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"

            />


    </LinearLayout>

    <Button
        android:id="@+id/deletebtn"
        android:layout_width="184dp"
        android:layout_height="79dp"
        android:layout_below="@id/ll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="121dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="122dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="Delete"
        android:textColor="@color/my_primary"
        android:textSize="18sp" />


</RelativeLayout>