<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    android:padding="16dp"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tittle_bar_layout">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="Showing Records"
            android:textColor="#ffbaba"
            android:textSize="32dp"
            android:textStyle="bold" />
        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/menu"
            android:src="@drawable/ic_baseline_menu_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="#ffbaba"
            />
    </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerview"
         android:layout_below="@+id/tittle_bar_layout"/>


         
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/my_primary"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/add_note_btn"

        android:src="@drawable/ic_baseline_add_24"/>



</RelativeLayout>